test/tests/stages/8_loops/valid/extra_credit/switch_with_continue.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[68]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  const int(4)
  )
  {
  case
  const int(0)
  :
  return
  const int(0)
  ;
  case
  const int(4)
  :
  {
  int
  identifier(acc)
  =
  const int(0)
  ;
  for
  (
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  <
  const int(10)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  {
  if
  (
  identifier(i)
  %
  const int(2)
  )
  continue
  ;
  identifier(acc)
  =
  identifier(acc)
  +
  const int(1)
  ;
  }
  return
  identifier(acc)
  ;
  }
  }
  return
  const int(0)
  ;
  }
