test/tests/stages/8_loops/invalid_parse/extra_credit/switch_missing_case_value.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  switch
  (
  const int(0)
  )
  {
  case
  :
  return
  const int(0)
  ;
  }
  }
